--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                             <p>+</p>
                             <p>기존의 웹사이트는 다양한 요소를 한 페이지에 배치하여 차별적인 개성이 부족했습니다.</p>
                             <p>다양한 기기와 해상도에 맞게 최적화되는 반응형 웹사이트로 리뉴얼하여</br>여러 환경의 사용자에게 편안한 경험을 제공하도록 제작했습니다.</p>
-                            <div class="box bg-1 work-btn">
-                                <button class="button button--aylen button--text-thin"><a href="./cyphers/index.html" target="_blank">View Website</a></button>
+                            <div class="work-btn">
+                                <div class="button button--aylen"><a href="./cyphers/index.html" target="_blank">View Website</a></div>
                             </div>
                         </figcaption>
                     </div>
@@ -145,8 +145,8 @@
                             <p>다양한 슬라이더 라이브러리를 이용하여 제작했습니다.</p>
                             <p>slick slider 와 owl carousel을 사용했습니다.</p>
                             <p>체크 패턴과 토끼 모양의 심볼을 일러스트로 제작하여 기존의 이미지보다 캐쥬얼하게 완성했습니다.</p>
-                            <div class="box bg-1 work-btn">
-                                <button class="button button--aylen button--text-thin"><a href="./subway/index.html" target="_blank">View Website</a></button>
+                            <div class="work-btn">
+                                <div class="button button--aylen"><a href="./subway/index.html" target="_blank">View Website</a></div>
                             </div>
                         </figcaption>
                     </div>
@@ -165,8 +165,8 @@
                             <p>모바일 사이즈에서 반응형 서비스가 가능한 페이지입니다.</p>
                             <p>다양한 슬라이더 사용과 특정한 사이즈가 되었을때</p>
                             <p>상단에 아코디언 메뉴와 검색 버튼이 활성화 되도록 제작했습니다.</p>
-                            <div class="box bg-1 work-btn">
-                                <button class="button button--aylen button--text-thin"><a href="./millie/index.html" target="_blank">View Website</a></button>
+                            <div class="work-btn">
+                                <div class="button button--aylen"><a href="./millie/index.html" target="_blank">View Website</a></div>
                             </div>
                         </figcaption>
                     </div>
@@ -185,8 +185,8 @@
                             <p>회원가입 과정을 단계별로 나누어 제작했습니다.</p>
                             <p>기존의 페이지와는 다르게 다양한 input 태그 속성을 사용했습니다.</p>
                             <p>회원가입을 해보세요!</p>
-                            <div class="box bg-1 work-btn">
-                                <button class="button button--aylen button--text-thin"><a href="./nanet/index.html" target="_blank">View Website</a></button>
+                            <div class="work-btn">
+                                <div class="button button--aylen"><a href="./nanet/index.html" target="_blank">View Website</a></div>
                             </div>
                         </figcaption>
                     </div>
@@ -204,9 +204,9 @@
                             <p>+</p>
                             <p>실제 메일 발송이 이루어지고 있는 홍보용 html을 직접 제작해보았습니다.</p>
                             <p>area 태그를 활용하여 다양한 기타 사이트로 이동이 가능합니다.</p>
-                            <p>+</p>
+                            <p>지금 확인해보세요!</p>
                             <div class="work-btn">
-                                <button class="button button--aylen button--text-thin"><a href="./cj/cj_index.html" target="_blank">View Website</a></button>
+                                <div class="button button--aylen"><a href="./cj/cj_index.html" target="_blank">View Website</a></div>
                             </div>
                         </figcaption>
                     </div>
