--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                 <div class="hover_wrap">
                     <div class="effect hover">
                         <figure class="front">
-                            <a href="./cyphers/index.html" target="_blank"><img src="./img/cp-thumb.jpg" alt="앞면 이미지"></a>
+                            <a href="./cyphers/intro.html" target="_blank"><img src="./img/cp-thumb.jpg" alt="앞면 이미지"></a>
                         </figure>
                         <figure class="back">
-                            <a href="./cyphers/index.html" target="_blank"><img src="./img/back-cp.jpg" alt="뒷면 이미지"></a>
+                            <a href="./cyphers/intro.html" target="_blank"><img src="./img/back-cp.jpg" alt="뒷면 이미지"></a>
                         </figure>
                         <figcaption>
                             <h3>사이퍼즈 반응형 웹사이트 리디자인</h3>
@@ -126,16 +126,16 @@
                             <p>기존의 웹사이트는 다양한 요소를 한 페이지에 배치하여 차별적인 개성이 부족했습니다.</p>
                             <p>다양한 기기와 해상도에 맞게 최적화되는 반응형 웹사이트로 리뉴얼하여</br>여러 환경의 사용자에게 편안한 경험을 제공하도록 제작했습니다.</p>
                             <div class="work-btn">
-                                <div class="button button--aylen"><a href="./cyphers/index.html" target="_blank">View Website</a></div>
+                                <div class="button button--aylen"><a href="./cyphers/intro.html" target="_blank">View Website</a></div>
                             </div>
                         </figcaption>
                     </div>
                     <div class="effect hover">
                         <figure class="front">
-                            <a href="./subway/index.html" target="_blank"><img src="./img/sub-thumb.jpg" alt="앞면 이미지"></a>
+                            <a href="./subway/intro.html" target="_blank"><img src="./img/sub-thumb.jpg" alt="앞면 이미지"></a>
                         </figure>
                         <figure class="back">
-                            <a href="./subway/index.html" target="_blank"><img src="./img/back-sub.jpg" alt="뒷면 이미지"></a>
+                            <a href="./subway/intro.html" target="_blank"><img src="./img/back-sub.jpg" alt="뒷면 이미지"></a>
                         </figure>
                         <figcaption>
                             <h3>서브웨이 웹사이트 제작</h3>
@@ -146,16 +146,16 @@
                             <p>slick slider 와 owl carousel을 사용했습니다.</p>
                             <p>체크 패턴과 토끼 모양의 심볼을 일러스트로 제작하여 기존의 이미지보다 캐쥬얼하게 완성했습니다.</p>
                             <div class="work-btn">
-                                <div class="button button--aylen"><a href="./subway/index.html" target="_blank">View Website</a></div>
+                                <div class="button button--aylen"><a href="./subway/intro.html" target="_blank">View Website</a></div>
                             </div>
                         </figcaption>
                     </div>
                     <div class="effect hover">
                         <figure class="front">
-                            <a href="./millie/index.html" target="_blank"><img src="./img/mille-thumb.jpg" alt="앞면 이미지"></a>
+                            <a href="./millie/intro.html" target="_blank"><img src="./img/mille-thumb.jpg" alt="앞면 이미지"></a>
                         </figure>
                         <figure class="back">
-                            <a href="./millie/index.html" target="_blank"><img src="./img/back-mille.jpg" alt="뒷면 이미지"></a>
+                            <a href="./millie/intro.html" target="_blank"><img src="./img/back-mille.jpg" alt="뒷면 이미지"></a>
                         </figure>
                         <figcaption>
                             <h3>밀리의서재 웹사이트 제작</h3>
@@ -166,16 +166,16 @@
                             <p>다양한 슬라이더 사용과 특정한 사이즈가 되었을때</p>
                             <p>상단에 아코디언 메뉴와 검색 버튼이 활성화 되도록 제작했습니다.</p>
                             <div class="work-btn">
-                                <div class="button button--aylen"><a href="./millie/index.html" target="_blank">View Website</a></div>
+                                <div class="button button--aylen"><a href="./millie/intro.html" target="_blank">View Website</a></div>
                             </div>
                         </figcaption>
                     </div>
                     <div class="effect hover">
                         <figure class="front">
-                            <a href="./nanet/index.html" target="_blank"><img src="./img/nanet-thumb.jpg" alt="앞면 이미지"></a>
+                            <a href="./nanet/intro.html" target="_blank"><img src="./img/nanet-thumb.jpg" alt="앞면 이미지"></a>
                         </figure>
                         <figure class="back">
-                            <a href="./nanet/index.html" target="_blank"><img src="./img/back-nanet.jpg" alt="뒷면 이미지"></a>
+                            <a href="./nanet/intro.html" target="_blank"><img src="./img/back-nanet.jpg" alt="뒷면 이미지"></a>
                         </figure>
                         <figcaption>
                             <h3>국회도서관 회원가입 페이지 제작</h3>
@@ -186,16 +186,16 @@
                             <p>기존의 페이지와는 다르게 다양한 input 태그 속성을 사용했습니다.</p>
                             <p>회원가입을 해보세요!</p>
                             <div class="work-btn">
-                                <div class="button button--aylen"><a href="./nanet/index.html" target="_blank">View Website</a></div>
+                                <div class="button button--aylen"><a href="./nanet/intro.html" target="_blank">View Website</a></div>
                             </div>
                         </figcaption>
                     </div>
                     <div class="effect hover">
                         <figure class="front">
-                            <a href="./cj/cj_index.html" target="_blank"><img src="./img/cj-thumb.jpg" alt="앞면 이미지"></a>
+                            <a href="./cj/cj_intro.html" target="_blank"><img src="./img/cj-thumb.jpg" alt="앞면 이미지"></a>
                         </figure>
                         <figure class="back">
-                            <a href="./cj/cj_index.html" target="_blank"><img src="./img/back-cj.jpg" alt="뒷면 이미지"></a>
+                            <a href="./cj/cj_intro.html" target="_blank"><img src="./img/back-cj.jpg" alt="뒷면 이미지"></a>
                         </figure>
                         <figcaption>
                             <h3>cjone 메일 발송 페이지 제작</h3>
@@ -206,7 +206,7 @@
                             <p>area 태그를 활용하여 다양한 기타 사이트로 이동이 가능합니다.</p>
                             <p>지금 확인해보세요!</p>
                             <div class="work-btn">
-                                <div class="button button--aylen"><a href="./cj/cj_index.html" target="_blank">View Website</a></div>
+                                <div class="button button--aylen"><a href="./cj/cj_intro.html" target="_blank">View Website</a></div>
                             </div>
                         </figcaption>
                     </div>
