--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
                     </div>
                     <div class="effect hover">
                         <figure class="front">
-                            <a href="./cj/cj_intro.html" target="_blank"><img src="./img/cj-thumb.jpg" alt="앞면 이미지"></a>
+                            <a href="./cj/intro.html" target="_blank"><img src="./img/cj-thumb.jpg" alt="앞면 이미지"></a>
                         </figure>
                         <figure class="back">
-                            <a href="./cj/cj_intro.html" target="_blank"><img src="./img/back-cj.jpg" alt="뒷면 이미지"></a>
+                            <a href="./cj/intro.html" target="_blank"><img src="./img/back-cj.jpg" alt="뒷면 이미지"></a>
                         </figure>
                         <figcaption>
                             <h3>cjone 메일 발송 페이지 제작</h3>
@@ -206,7 +206,7 @@
                             <p>area 태그를 활용하여 다양한 기타 사이트로 이동이 가능합니다.</p>
                             <p>지금 확인해보세요!</p>
                             <div class="work-btn">
-                                <div class="button button--aylen"><a href="./cj/cj_intro.html" target="_blank">View Website</a></div>
+                                <div class="button button--aylen"><a href="./cj/intro.html" target="_blank">View Website</a></div>
                             </div>
                         </figcaption>
                     </div>
