--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                         <span>안녕하세요. 신입 웹퍼블리셔 김경미입니다.
                              과정 수료 후 꾸준히 웹접근성과 반응형을 공부하고 있습니다.</span>
                         <span>포트폴리오를 제작하면서 부족한 점을 깨닫게 되어, 
-                            인프런에서 온라인 강의를 들으며 몰랐던 기능에 대해 공부하거나</br>
+                            인프런에서 온라인 강의를 들으며 몰랐던 기능에 대해 공부하거나<br>
                             google을 뒤져가며 새로운 효과들을 찾아내고 있습니다. 
                             여가시간에는 산책을 하거나 책을 읽습니다.</span>
                         <span>친한 친구들에게는 따뜻하고 섬세하다는 말을 많이 듣습니다. 
-                            스스로도 편안한 사람이 되고자 노력합니다.</br>
-                            대학시절 다양한 아르바이트를 했던 경험이 이런 생각의 폭을 넓혀준 것 같습니다. </br>
+                            스스로도 편안한 사람이 되고자 노력합니다.<br>
+                            대학시절 다양한 아르바이트를 했던 경험이 이런 생각의 폭을 넓혀준 것 같습니다. <br>
                             긍정의 기운으로 풀이 죽어도 금방 원래대로 돌아오는 성격입니다.</span>
                     </div>
                     <b>왜 web인가요?</b>
@@ -118,17 +118,17 @@
                         <figure class="back">
                             <a href="./cyphers/intro.html" target="_blank"><img src="./img/back-cp.jpg" alt="뒷면 이미지"></a>
                         </figure>
-                        <figcaption>
+                        <div class="figcaption">
                             <h3>사이퍼즈 반응형 웹사이트 리디자인</h3>
                             <p>제작기간 7일</p>
                             <p>참여율 100%</p>
                             <p>+</p>
                             <p>기존의 웹사이트는 다양한 요소를 한 페이지에 배치하여 차별적인 개성이 부족했습니다.</p>
-                            <p>다양한 기기와 해상도에 맞게 최적화되는 반응형 웹사이트로 리뉴얼하여</br>여러 환경의 사용자에게 편안한 경험을 제공하도록 제작했습니다.</p>
+                            <p>다양한 기기와 해상도에 맞게 최적화되는 반응형 웹사이트로 리뉴얼하여<br>여러 환경의 사용자에게 편안한 경험을 제공하도록 제작했습니다.</p>
                             <div class="work-btn">
                                 <div class="button button--aylen"><a href="./cyphers/intro.html" target="_blank">View Website</a></div>
                             </div>
-                        </figcaption>
+                        </div>
                     </div>
                     <div class="effect hover">
                         <figure class="front">
@@ -137,7 +137,7 @@
                         <figure class="back">
                             <a href="./subway/intro.html" target="_blank"><img src="./img/back-sub.jpg" alt="뒷면 이미지"></a>
                         </figure>
-                        <figcaption>
+                        <div class="figcaption">
                             <h3>서브웨이 웹사이트 제작</h3>
                             <p>제작기간 3일</p>
                             <p>참여율 100%</p>
@@ -148,7 +148,7 @@
                             <div class="work-btn">
                                 <div class="button button--aylen"><a href="./subway/intro.html" target="_blank">View Website</a></div>
                             </div>
-                        </figcaption>
+                        </div>
                     </div>
                     <div class="effect hover">
                         <figure class="front">
@@ -157,7 +157,7 @@
                         <figure class="back">
                             <a href="./millie/intro.html" target="_blank"><img src="./img/back-mille.jpg" alt="뒷면 이미지"></a>
                         </figure>
-                        <figcaption>
+                        <div class="figcaption">
                             <h3>밀리의서재 웹사이트 제작</h3>
                             <p>제작기간 3일</p>
                             <p>참여율 100%</p>
@@ -168,7 +168,7 @@
                             <div class="work-btn">
                                 <div class="button button--aylen"><a href="./millie/intro.html" target="_blank">View Website</a></div>
                             </div>
-                        </figcaption>
+                        </div>
                     </div>
                     <div class="effect hover">
                         <figure class="front">
@@ -177,7 +177,7 @@
                         <figure class="back">
                             <a href="./nanet/intro.html" target="_blank"><img src="./img/back-nanet.jpg" alt="뒷면 이미지"></a>
                         </figure>
-                        <figcaption>
+                        <div class="figcaption">
                             <h3>국회도서관 회원가입 페이지 제작</h3>
                             <p>제작기간 7일</p>
                             <p>참여율 100%</p>
@@ -188,7 +188,7 @@
                             <div class="work-btn">
                                 <div class="button button--aylen"><a href="./nanet/intro.html" target="_blank">View Website</a></div>
                             </div>
-                        </figcaption>
+                        </div>
                     </div>
                     <div class="effect hover">
                         <figure class="front">
@@ -197,7 +197,7 @@
                         <figure class="back">
                             <a href="./cj/intro.html" target="_blank"><img src="./img/back-cj.jpg" alt="뒷면 이미지"></a>
                         </figure>
-                        <figcaption>
+                        <div class="figcaption">
                             <h3>cjone 메일 발송 페이지 제작</h3>
                             <p>제작기간 1일</p>
                             <p>참여율 100%</p>
@@ -208,7 +208,7 @@
                             <div class="work-btn">
                                 <div class="button button--aylen"><a href="./cj/intro.html" target="_blank">View Website</a></div>
                             </div>
-                        </figcaption>
+                        </div>
                     </div>
                 </div>
 
