--- a/cj/intro.html
+++ b/cj/intro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CJ One</title>
+    <title>CJ ONE</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,400,500,600,700&display=swap" rel="stylesheet">
     <style>
         * {margin:0;padding:0}
@@ -70,7 +70,7 @@ table td:last-child{
     </style>
 </head>
 <body>
-    <h1>CJ One 메일 발송 페이지 제작</h1>
+    <h1>CJ ONE 메일 발송 페이지 제작</h1>
     <div class="info">
         <h2>제작기간</h2>
         <ul>
