--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                     <b>미래의 내 모습은 어떤가요?</b>
                     <div class="textC">
-                        <span>다양한 스크립트를 경험해보고 터득해 2-3년 후에는 프론트엔드 개발자로 불리고 싶습니다.</span>
+                        <span>다양한 스크립트를 경험해보고 터득해 입사 1년 차 때에는 React, Angulr, Vue와 같은 프레임워크에 도전해보고 싶습니다.</span>
                     </div>
                 </div>
             </section>
