--- a/index.html
+++ b/index.html
@@ -52,22 +52,67 @@
                 </ul>
             </div>
             <section class="home">
-                <div class="main">
-                    <h1>Web Accessibility</h1>
-                    <h1>Thinker.</h1>
-                    <h2>Interective</h2>
-                    <h2>Creative!</h2>
+                <div class="main" aria-label="Web Accessibility Thinker Interective Creative">
+                    <div class="first">
+                        <span>W</span>
+                        <span>e</span>
+                        <span>b</span>
+                        <span>&nbsp;</span>
+                        <span>A</span>
+                        <span>c</span>
+                        <span>c</span>
+                        <span>e</span>
+                        <span>s</span>
+                        <span>s</span>
+                        <span>i</span>
+                        <span>b</span>
+                        <span>i</span>
+                        <span>l</span>
+                        <span>i</span>
+                        <span>t</span>
+                        <span>y</span>
+                    </div>
+                    <div class="second">
+                        <span>T</span>
+                        <span>h</span>
+                        <span>i</span>
+                        <span>n</span>
+                        <span>k</span>
+                        <span>e</span>
+                        <span>r</span>
+                        <span>.</span>
+                    </div>
+                    <div class="third">
+                        <span>I</span>
+                        <span>n</span>
+                        <span>t</span>
+                        <span>e</span>
+                        <span>r</span>
+                        <span>e</span>
+                        <span>c</span>
+                        <span>t</span>
+                        <span>i</span>
+                        <span>v</span>
+                        <span>e</span>
+                    </div>
+                    <div class="fourth">
+                        <span>C</span>
+                        <span>r</span>
+                        <span>e</span>
+                        <span>a</span>
+                        <span>t</span>
+                        <span>i</span>
+                        <span>v</span>
+                        <span>e</span>
+                        <span>!</span>
+                    </div>
                 </div>
-            <!-- section-home-cube -->
-            <div class="cube">
-                <div class="c-box c-front"></div>
-                <div class="c-box c-right"></div>
-                <div class="c-box c-back"></div>
-                <div class="c-box c-left"></div>
-                <div class="c-box c-top"></div>
-                <div class="c-box c-bottom"></div>
-            </div>
-            <!-- //section-home-cube -->
+                <div class="blob">
+                    <!-- This SVG is from https://codepen.io/Ali_Farooq_/pen/gKOJqx -->
+                    <svg xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 310 350">
+                    <path d="M156.4,339.5c31.8-2.5,59.4-26.8,80.2-48.5c28.3-29.5,40.5-47,56.1-85.1c14-34.3,20.7-75.6,2.3-111  c-18.1-34.8-55.7-58-90.4-72.3c-11.7-4.8-24.1-8.8-36.8-11.5l-0.9-0.9l-0.6,0.6c-27.7-5.8-56.6-6-82.4,3c-38.8,13.6-64,48.8-66.8,90.3c-3,43.9,17.8,88.3,33.7,128.8c5.3,13.5,10.4,27.1,14.9,40.9C77.5,309.9,111,343,156.4,339.5z"/>
+                    </svg>
+                </div>
             </section>
         </div>
         <div id="contents">
@@ -99,7 +144,7 @@
                             어떻게보면 다짜고짜 뛰어들었는데 생각보다 적성에 잘 맞았습니다. 
                             밤을 새우면서 웹의 매력에 빠져있다는 걸 깨달았습니다.</span>
                         <span>다양한 사이트들의 코드를 보면서 왜 이렇게 작업했을까, 고민합니다. 
-                            연습 삼아 카피 페이지들을 만들어보고 있습니다. 화려한 효과를 주는 작업은 아직 쉽지않지만 나아가 더 좋은 화면을 구현하기 위해 코드를 파악해가며 습득하는 중입니다.</span>
+                            연습 삼아 카피 페이지들을 만들어보고 있습니다. 화려한 효과를 주는 작업은 아직 쉽지않지만 나아가 더 나은 화면을 구현하기 위해 코드를 파악해가며 습득하는 중입니다.</span>
                         <span>최근에는 버튼을 클릭하거나 마우스를 올렸을 때 예상치 못한 재미있는 효과를 구현하기 위해 google과 디비컷을 참고하여 만들어보고 있습니다.</span>
                     </div>
                     <b>미래의 내 모습은 어떤가요?</b>
