--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             밤을 새우면서 웹의 매력에 빠져있다는 걸 깨달았습니다.</span>
                         <span>다양한 사이트들의 코드를 보면서 왜 이렇게 작업했을까, 고민합니다. 
                             연습 삼아 카피 페이지들을 만들어보고 있습니다. 화려한 효과를 주는 작업은 아직 쉽지않지만 나아가 더 나은 화면을 구현하기 위해 코드를 파악해가며 습득하는 중입니다.</span>
-                        <span>최근에는 버튼을 클릭하거나 마우스를 올렸을 때 예상치 못한 재미있는 효과를 구현하기 위해 google과 디비컷을 참고하여 만들어보고 있습니다.</span>
+                        <span>최근에는 버튼을 클릭하거나 마우스를 올렸을 때 예상치 못한 재미있는 효과를 구현하기 위해 google과 code-pen을 참고하여 만들어보고 있습니다.</span>
                     </div>
                     <b>미래의 내 모습은 어떤가요?</b>
                     <div class="textC">
