--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <p>
                             작업 의뢰 및 포트폴리오 관련 문의 사항을 남겨주세요<br>
                             확인 후 빠른 시일 내에 답변드리겠습니다</p>
-                        <form method="POST" action="https://formspree.io/xdodprjo">
+                        <form method="POST" action="https://formspree.io/xdodprjo" accept-charset="utf-8">
                             <input type="text" name="name" class="s4-name" placeholder="이름 또는 회사명" required><br>
                             <input type="email" name="_replyto" class="s4-email" placeholder="이메일 주소 (연락처)" required><br>
                             <textarea name="message" class="s4-message" placeholder="메세지 내용" required></textarea><br>
